# atividades-processamento-grafico

desafio-modulo-2/: main
desafio-modulo-2/src/: glad.c  main.cpp
desafio-modulo-6/: CMakelists.txt  README.md  Readme.md  items.txt  main  map.txt  run.sh  tile_properties.txt
desafio-modulo-6/src/: CliqueTriangulos.cpp  IsometricTilemap.cpp  ParallaxScrolling.cpp
teste/: CMakeLists.txt  main  run.sh
teste/include/glad/: glad.h
teste/src/: main.cpp
